feat: LangChain入门学习 & Demo

--- a/docs/D/02.大模型认知.md
+++ b/docs/D/02.大模型认知.md
@@ -1,5 +1,6 @@
 Date 2025.5.23
-### ：
+# 大模型认知
+
 ### 发展史：
 [人工智能发展史：1900~2023](https://zhuanlan.zhihu.com/p/703419161)
 
@@ -32,32 +33,21 @@ Date 2025.5.23
 ### 大模型的工作原理
 大模型通过分析输入内容，利用已学到的知识和模式，预测并生成最合适的输出。
 
+~~~
 比如：输入"今天天气真"，模型会一步步预测下一个最可能的词（token），比如"好"，于是生成"今天天气真好"；再继续预测下一个词，直到生成完整的句子。这就像在玩"你说一句我接一句"的游戏，每次都根据前面的内容猜下一个词。
+~~~
 
-**Token是什么** 
-Token（令牌）是大模型处理文本时的最小单位，可以是一个字、一个词，甚至是一个符号。
 
+**Token是什么:** 
+
+Token（令牌）是大模型处理文本时的最小单位，可以是一个字、一个词，甚至是一个符号。 
+~~~
 比如：
-- 在中文里，"今天天气真好"可以被分成5个token：今、天、天、气、真、好。
-- 在英文里，"Learning" 可能会被分成 "Learn" 和 "ing" 两个token。
-
+1. 在中文里，"今天天气真好"可以被分成5个token：今、天、天、气、真、好。
+2. 在英文里，"Learning" 可能会被分成 "Learn" 和 "ing" 两个token。
+~~~
 模型会把输入的句子拆分成一串token，然后逐个进行分析和生成。
 
-### :
 
-### :
-
-### :
-
-### :
-
-### :
-
-### :
-
-### :
-
-### :
-
-### RAG(Retrieval-Augmented Generation，检索增强生成):
-是一种结合外部知识检索与生成式AI的技术，能先检索相关信息，再生成更准确的回答。
+### Demo: 
+[02.大模型认知Demo](./Demo/02.大模型认知Demo.py)
