--- a/docs/D/04.Function Calling.md
+++ b/docs/D/04.Function Calling.md
@@ -29,4 +29,5 @@ Function Calling 让大模型不仅能"理解和表达"，还能"行动和执行
 
 
 ### Demo: 
-04.FunctionCallDemo
+
+[04.FunctionCallDemo](./Demo/04.FunctionCallDemo.py)
