--- a/weekly-note/推荐阅读.md
+++ b/weekly-note/推荐阅读.md
@@ -3,5 +3,9 @@
 ## 推荐阅读
 2025-5.23：
 
-- [Claude 4 发布新闻**Claude Opus 4** 和 **Claude Sonnet 4** ，为编码、高级推理和 AI 代理设定新的标准。](https://www.anthropic.com/news/claude-4)
+- [最新发布 **Claude Opus 4** 和 **Claude Sonnet 4** ，为编码、高级推理和 AI 代理设定新的标准。](https://www.anthropic.com/news/claude-4)
 - [OpenAI 最新动态](https://openai.com/blog/)
+- [Agent Infra 图谱：哪些组件值得为 Agent 重做一遍？](https://mp.weixin.qq.com/s/9I2GccOVm_2hNzLGlaZ5_g)
+
+2025-5.28：
+- [Claude 4 prompt engineering best practices](https://docs.anthropic.com/en/docs/build-with-claude/prompt-engineering/claude-4-best-practices)
