feat: 修改文件目录

--- a/docs/D/Docs/06.LangChain.md
+++ b/docs/D/Docs/06.LangChain.md
@@ -185,6 +185,16 @@ print(result["result"])
 ```
 
 > 你可以根据实际场景选择合适的链类型，并灵活组合实现复杂的业务逻辑。
+## LangChain RAG  步骤
+1. 读取文档
+2. 文档分割
+3. 文档向量化，向量数据库存储
+4. 向量检索（验证）
+5. 组装prompt
+6. 调用LLM
+
+
+
 
 ## Demo
 [06-1.LangChain_chatModels](./Demo/06-1.LangChain_chatModels.py)
