feat: 修改目录 文件夹路径

--- a/docs/D/06.LangChain.md
+++ b/docs/D/06.LangChain.md
@@ -153,7 +153,7 @@ LangChain 将模型的使用过程拆分为三个核心步骤：提示词构建(
 
 ## Langchain 常用Chain
 
-**create_stuff_documents_chain 文档链：**
+**1. create_stuff_documents_chain 文档链：**
 
 将获取文档列表并将他们全部格式化为指定结构，常用于RAG（检索增强生成）场景，将检索到的文档统一整理后输入给大模型。
 ```python
@@ -172,7 +172,7 @@ result = doc_chain.invoke(docs)
 print(result)
 ```
 
-**create_sql_query_chain 文档链：**
+**2. create_sql_query_chain 文档链：**
 
 用于将自然语言问题自动转换为SQL查询语句，常用于数据库问答、数据分析等场景。
 ```python
@@ -185,90 +185,32 @@ print(result["result"])
 ```
 
 > 你可以根据实际场景选择合适的链类型，并灵活组合实现复杂的业务逻辑。
-## LangChain RAG  步骤
-1. 读取文档
-2. 文档分割
-3. 文档向量化，向量数据库存储
-4. 向量检索（验证）
-5. 组装prompt
-6. 调用LLM
 
 
-# Agent
 
-LLM+观察+思考+行动+记忆，
-将大模型作为一个推理引擎，给定一个任务，智能体自动生成完成任务所需的步骤，执行响应动作（例如选择并调用工具），直到任务完成
-
-## Agent五要素：
-
-**Benchmark（基准评测）**：
-
-用于衡量Agent能力的标准和测试集。通过Benchmark可以系统性地评估Agent在不同任务、场景下的表现，便于对比和优化。
-
-**LLM（大语言模型）**：
-
-Agent的核心智能引擎，负责理解、推理和生成自然语言。常见如GPT-4、Llama等。LLM的能力直接决定了Agent的理解和生成水平。
-
-**Prompt（提示词/指令）**：
-
-与LLM交互的输入模板或指令，决定了LLM的行为方式。优秀的Prompt设计能极大提升Agent的任务完成效果和鲁棒性。
-
-**Tool（工具/插件）**：
-
-Agent可调用的外部能力，如搜索引擎、计算器、数据库、API等。通过工具，Agent能突破LLM本身的知识和能力边界，完成更复杂的任务。
-
-**Memory（记忆/上下文管理）**：
-
-Agent对历史对话、任务进展、用户偏好等信息的存储与调用能力。Memory让Agent具备持续对话、长期任务跟踪和个性化服务的能力。
-
-
-## ReAct Agent
-
-ReAct 反思型智能体（Reflective Agent）是 langchain 的其中一种聊天代理 Agent 类型，具备以下特点：
-- 反思能力：ReAct 代理在给出响应之前，会先对自己的行为和预测进行深入的反思和评估，它会检查自己是否遵循了预先设定的规则和指令，是否达到了预期目标。
-- 自我纠错：如果 ReAct 代理在反思过程中发现自己存在问题或者疏漏，它会主动尝试对自己的行为进行纠错和改正，以修复错误、提高自身的表现。
-- 迭代学习：通过不断地反思和自我纠错，ReAct 代理可以在与用户交互中逐步学习和优化自己的行为方式，不断提高回答的质量和准确性。
-- 可解释性：ReAct 代理在给出最终响应时，会同时提供自己的思考过程和决策依据，使得它的行为更加透明和可解释。
-
-这种具备反思和自我纠错能力的 ReAct 代理，在需要提高可靠性的应用场景中很有优势，例如智能客服、问答系统、任务执行等。它可以通过持续的自我学习和优化，为用户提供更加智能和可信的交互体验。
-
-Demo: [07-2.Agent_ReAct](../Demo/07-2.Agent_ReAct.py)
-
-## Memory
-大多数 LLM 应用都具有对话功能，如聊天机器人，记住先前的交互非常关键。对话的重要一环是能够引用之前提及的信息，这些信息需要进行存储，因此将这种存储过去交互信息的能力称之为记忆（Memory）。
-
-默认情况下，链式模型和代理都是无状态的，这意味着它们会独立处理每个传入的查询，类似于底层的 LLMs 和聊天模型本身的处理方式。有了记忆之后，每个链都定义了一些核心执行逻辑，这些逻辑的一部分输入直接来自用户，另一部分则来自记忆。在给定的运行中，链将与其记忆系统交互两次：
-
-1. 在接收到初始用户输入之后但在执行核心逻辑之前，链将从其内存系统中读取并增强用户输入。
-2. 在执行核心逻辑之后但返回答案之前，链会将当前运行的输入和输出写入内存，以便在将来的运行中引用。
-<div align="center">
-<img src="./Images/0_sUkvbURF633MXJyX.webp" alt="0_sUkvbURF633MXJyX" style="zoom:40%;" />
-</div>
+## LangChain实现RAG
+**1. Document loaders 文档加载模块：**
+LancChain封装了一系列类型的文档加载模块，如：PDF、CSV、HTML、JSON、Markdowm、File等.
+e.g: PDF
 
 
 ## Demo
-[06-1.LangChain_chatModels](../Demo/06-1.LangChain_chatModels.py)
+[06-1.LangChain_chatModels](./Demo/06-1.LangChain_chatModels.py)
 
-[06-2.LangChain_outputParsers](../Demo/06-2.LangChain_outputParsers.py)
+[06-2.LangChain_outputParsers](./Demo/06-2.LangChain_outputParsers.py)
 
-[06-3.LangChain_faiss](../Demo/06-3.LangChain_faiss.py)
+[06-3.LangChain_faiss](./Demo/06-3.LangChain_faiss.py)
 
-[06-4.LangChain_rag](../Demo/06-4.LangChain_rag.py)
+[06-4.LangChain_rag](./Demo/06-4.LangChain_rag.py)
 
-[06-5.LangChain_agent](../Demo/06-5.LangChain_agent.py)
+[06-5.LangChain_agent](./Demo/06-5.LangChain_agent.py)
 
-[06-6.LangChain_template](../Demo/06-6.LangChain_template.py)
+[06-6.LangChain_template](./Demo/06-6.LangChain_template.py)
 
-[06-7.LangChain_embedding](../Demo/06-7.LangChain_embedding.py)
+[06-7.LangChain_embedding](./Demo/06-7.LangChain_embedding.py)
 
-[06-8.LangChain_parser](../Demo/06-8.LangChain_parser.py)
+[06-8.LangChain_parser](./Demo/06-8.LangChain_parser.py)
 
-[06-9.LangChain_openaiFunc](../Demo/06-9.LangChain_openaiFunc.py)
+[06-9.LangChain_openaiFunc](./Demo/06-9.LangChain_openaiFunc.py)
 
-[06-10.LangChain_chainDemo](../Demo/06-10.LangChain_chainDemo.py)
-
-[06-11.LangChain_pdf](../Demo/06-11.LangChain_pdf.py)
-
-[07-1.AgentDemo](../Demo/07-1.AgentDemo.py)
-
-[07-2.Agent_ReAct](../Demo/07-2.Agent_ReAct.py)
+[06-10.LangChain_chainDemo](./Demo/06-10.LangChain_chainDemo.py)
