--- a/weekly-note/推荐阅读.md
+++ b/weekly-note/推荐阅读.md
@@ -9,3 +9,6 @@
 
 2025-5.28：
 - [Claude 4 prompt engineering best practices](https://docs.anthropic.com/en/docs/build-with-claude/prompt-engineering/claude-4-best-practices)
+
+2025-6.6：
+[Cursor 创始人：后代码时代，「品味」将越来越有价值｜Z Talk](https://mp.weixin.qq.com/s/XUKSAonVpwTXKyfkQ979LQ)
